Change instances of 'validate' to 'verify' and fix a few bugs.

--- a/_output/templates/admin/liamw_xenforolicensevalidation_option_registration.html
+++ b/_output/templates/admin/liamw_xenforolicensevalidation_option_registration.html
@@ -1,5 +1,5 @@
 <xf:checkboxrow value="{$option.option_value.type}"
-                hint="{$editHtml}"
+                hint="{$hintHtml}"
                 explain="{$explainHtml}"
                 html="{$listedHtml}">
 
