--- a/_output/templates/public/liamw_xenforolicenseverification_verify_license.html
+++ b/_output/templates/public/liamw_xenforolicenseverification_verify_license.html
@@ -4,9 +4,13 @@
 <xf:wrap template="account_wrapper"/>
 
 <xf:if is="{$xf.visitor.XenForoLicense}">
-    <div class="block-container">
-        <div class="block-body">
-            <p>{{ phrase('liamw_xenforolicenseverification_your_license_has_already_been_verified') }}</p>
+    <div class="block">
+        <div class="block-container">
+            <div class="block-body">
+                <div class="block-row">{{
+                    phrase('liamw_xenforolicenseverification_your_license_has_already_been_verified') }}
+                </div>
+            </div>
         </div>
     </div>
     <xf:else/>
