--- a/_output/templates/public/liamw_xenforolicenseverification_verify_license.html
+++ b/_output/templates/public/liamw_xenforolicenseverification_verify_license.html
@@ -9,43 +9,8 @@
             <div class="block-body">
                 <h3 class="block-header">{{ phrase('liamw_xenforolicenseverification_license_details') }}</h3>
 
-                <xf:formrow label="{{ phrase('liamw_xenforolicenseverification_license_status') }}" rowtype="button">
-                    {{ phrase('valid') }}
-
-                    <xf:button href="{{ link('account/xenforo-license/remove') }}" class="button--link" overlay="true">
-                        {{ phrase('liamw_xenforolicenseverification_remove_license_details') }}
-                    </xf:button>
-                </xf:formrow>
-
-                <xf:formrow label="{{ phrase('liamw_xenforolicenseverification_xf_validation_token') }}"
-                            rowtype="button"
-                            explain="{{ phrase('liamw_xenforolicenseverification_xf_validation_token_explain') }}">
-                    {$xf.visitor.XenForoLicense.validation_token}
-
-                    <xf:button href="{{ link('account/xenforo-license/update') }}" class="button--link" overlay="true">
-                        {{ phrase('update') }}
-                    </xf:button>
-                </xf:formrow>
-
-                <xf:formrow label="{{ phrase('liamw_xenforolicenseverification_customer_token') }}"
-                            explain="{{ phrase('liamw_xenforolicenseverification_customer_token_explain') }}">
-                    {$xf.visitor.XenForoLicense.customer_token}
-                </xf:formrow>
-
-                <xf:formrow label="{{ phrase('liamw_xenforolicenseverification_license_token') }}"
-                            explain="{{ phrase('liamw_xenforolicenseverification_license_token_explain') }}">
-                    {$xf.visitor.XenForoLicense.license_token}
-                </xf:formrow>
-
-                <xf:formrow label="{{ phrase('liamw_xenforolicenseverification_domain') }}"
-                            explain="{{ phrase('liamw_xenforolicenseverification_domain_explain') }}">
-                    {$xf.visitor.XenForoLicense.domain}
-                </xf:formrow>
-
-                <xf:formrow label="{{ phrase('liamw_xenforolicenseverification_last_verification_date') }}"
-                            explain="{{ phrase('liamw_xenforolicenseverification_last_verification_date_explain') }}">
-                    {{ date($xf.visitor.XenForoLicense.validation_date) }}
-                </xf:formrow>
+                <xf:macro name="liamw_xenforolicense_license_detail_fields" arg-user="{$xf.visitor}"
+                          arg-removeLink="{{ link('account/xenforo-license/remove') }}"/>
             </div>
         </div>
     </div>
@@ -60,6 +25,54 @@
         </div>
     </xf:form>
 </xf:if>
+
+<xf:macro name="liamw_xenforolicense_license_detail_fields" arg-user="!"
+          arg-updateLink="account/xenforo-license/update" arg-removeLink="!">
+    <xf:formrow label="{{ phrase('liamw_xenforolicenseverification_license_status') }}"
+                rowtype="{{ $user.XenForoLicense ? 'button' : null }}">
+        {{ $user.XenForoLicense ? phrase('valid') : phrase('liamw_xenforolicenseverification_not_provided') }}
+
+        <xf:if is="$user.XenForoLicense AND $removeLink">
+            <xf:button href="{$removeLink}" class="button--link" overlay="true">
+                {{ phrase('liamw_xenforolicenseverification_remove_license_details') }}
+            </xf:button>
+        </xf:if>
+    </xf:formrow>
+
+    <xf:if is="$user.XenForoLicense">
+        <xf:formrow label="{{ phrase('liamw_xenforolicenseverification_xf_validation_token') }}"
+                    rowtype="{{ $updateLink ? 'button' : null }}"
+                    explain="{{ phrase('liamw_xenforolicenseverification_xf_validation_token_explain') }}">
+            {$user.XenForoLicense.validation_token}
+
+            <xf:if is="{$updateLink}">
+                <xf:button href="{{ link($updateLink) }}" class="button--link" overlay="true">
+                    {{ phrase('update') }}
+                </xf:button>
+            </xf:if>
+        </xf:formrow>
+
+        <xf:formrow label="{{ phrase('liamw_xenforolicenseverification_customer_token') }}"
+                    explain="{{ phrase('liamw_xenforolicenseverification_customer_token_explain') }}">
+            {$user.XenForoLicense.customer_token}
+        </xf:formrow>
+
+        <xf:formrow label="{{ phrase('liamw_xenforolicenseverification_license_token') }}"
+                    explain="{{ phrase('liamw_xenforolicenseverification_license_token_explain') }}">
+            {$user.XenForoLicense.license_token}
+        </xf:formrow>
+
+        <xf:formrow label="{{ phrase('liamw_xenforolicenseverification_domain') }}"
+                    explain="{{ phrase('liamw_xenforolicenseverification_domain_explain') }}">
+            {$user.XenForoLicense.domain}
+        </xf:formrow>
+
+        <xf:formrow label="{{ phrase('liamw_xenforolicenseverification_last_verification_date') }}"
+                    explain="{{ phrase('liamw_xenforolicenseverification_last_verification_date_explain') }}">
+            {{ date($user.XenForoLicense.validation_date) }}
+        </xf:formrow>
+    </xf:if>
+</xf:macro>
 
 <xf:macro name="liamw_xenforolicense_form_fields" arg-context="!">
     <xf:textboxrow name="xenforo_license_verification[token]"
