Beta 2, add XF license and customer tokens to user searcher.

--- a/_output/templates/public/liamw_xenforolicenseverification_remove_license.html
+++ b/_output/templates/public/liamw_xenforolicenseverification_remove_license.html
@@ -1,6 +1,6 @@
 <xf:title>{{ phrase('liamw_xenforolicenseverification_remove_xenforo_license_details') }}</xf:title>
 
-<xf:form action="{{ link('account/xenforo-license/remove') }}">
+<xf:form action="{{ link('account/xenforo-license/remove') }}" class="block">
     <div class="block-container">
         <div class="block-body">
             <xf:inforow>
