--- a/_output/templates/public/liamw_xenforolicenseverification_remove_license.html
+++ b/_output/templates/public/liamw_xenforolicenseverification_remove_license.html
@@ -4,7 +4,7 @@
     <div class="block-container">
         <div class="block-body">
             <xf:inforow>
-                <div class="blockMessage blockMessage--warning"><strong>{{ phrase('note:') }}</strong> {{
+                <div class="blockMessage blockMessage--warning"><strong>{{ phrase('warning:') }}</strong> {{
                     phrase('liamw_xenforolicenseverification_remove_license_details_warning') }}
                 </div>
             </xf:inforow>
